--- a/fonte/coruja/meu_coruja/detalhamentoFaltas.html
+++ b/fonte/coruja/meu_coruja/detalhamentoFaltas.html
@@ -21,31 +21,35 @@
                     });
                 }
             });
-
+            
+            
             $(document).ready(function () {
-                $.ajax({url: "endpoint_meucoruja.php",
-                    success: function (result, status, jqXHR) {
-                        boletim = JSON.parse(localStorage.getItem('meuCoruja'))[1];
-                        detalhamentoFaltas = boletim[0][2];
-                        console.log(boletim);
+                console.log(sessionStorage.getItem("idDetalhamentoFaltas"));
+                boletim = JSON.parse(localStorage.getItem('meuCoruja')).boletim;
 
+                dadosDisciplina = boletim.disciplinas[sessionStorage.getItem("idDetalhamentoFaltas")].info;
+                siglaDisciplina = dadosDisciplina.siglaDisciplina;
+                detalhamentoFaltas = boletim.disciplinas[sessionStorage.getItem("idDetalhamentoFaltas")].detalhamentoFaltas;
+                document.getElementById("tituloDetalhamentoFaltas").innerHTML = "Faltas de "+siglaDisciplina;
 
-                        for (var i = 0; i < detalhamentoFaltas.length; i++) {
-                            siglaDisciplina = boletim[i][0].siglaDisciplina;
-                            nomeDisciplina = boletim[i][0].nomeDisciplina;
-                            qtdeFaltas = detalhamentoFaltas[i].qtdeFaltas;
-                            data = detalhamentoFaltas[i].data;
-                            siglaPeriodo = detalhamentoFaltas[i].siglaPeriodo;
-                            $("#detalhamentoFaltas").find('tbody')
-                                    .append(($('<tr>'))
-                                            .append($("<td data-label='Disciplina' data-tooltip='" + nomeDisciplina + "'>" + siglaDisciplina + "</td>"))
-                                            .append($("<td data-label='Quantidade de Faltas'>" + qtdeFaltas + "</td>"))
-                                            .append($("<td data-label='Data'>" + data + "</td>"))
-                                            .append($("<td data-label='Situação'>" + siglaPeriodo + "</td>"))
+                if(detalhamentoFaltas.length>0){
 
-                                            );
-                        }
-                    }});
+                    document.getElementById("detalhamentoFaltas").style.visibility = "visible";
+
+                    for (var i = 0; i < detalhamentoFaltas.length; i++) {
+                        qtdeFaltas = detalhamentoFaltas[i].qtdeFaltas;
+                        data = detalhamentoFaltas[i].data;
+                        siglaPeriodo = detalhamentoFaltas[i].siglaPeriodo;
+                        $("#detalhamentoFaltas").find('tbody')
+                                .append(($('<tr>'))
+                                        .append($("<td data-label='Quantidade'>" + qtdeFaltas + "</td>"))
+                                        .append($("<td data-label='Data'>" + data + "</td>"))
+                                        .append($("<td data-label='Período'>" + siglaPeriodo + "</td>"))
+                                        );
+                    }
+                }else{
+                    document.getElementById("naoPossuiFaltas").style.visibility = "visible";
+                }
             });
         </script>
 
@@ -57,12 +61,12 @@
 
         <div class="site-wrap">
 
-            <h1>Faltas</h1>
-            <table id="detalhamentoFaltas">
+            <h1 id="tituloDetalhamentoFaltas" align="center"></h1>
+            <h3 id="naoPossuiFaltas" align="center" style="visibility: hidden; color:blue">Parabéns, você não possui faltas nesta disciplina!</h3>
+            <table id="detalhamentoFaltas" style="visibility: hidden">
                 <thead>
                     <tr>
-                        <th>Disciplina</th>
-                        <th>Quantidade</th>
+                        <th>Quantidade de Faltas</th>
                         <th>Data</th>
                         <th>Período</th>
 
