• Refatoração no index.html para receber a requisição ao endpoint.
• Refatoração de páginas para deixarem de fazer requisição ao endpoint. Agora elas só acessam ao localStorage.

• Adição do Manifest.json para instalação do Progressive Web App.

• Remoção de Arquivos que não eram mais utilizados.

--- a/fonte/coruja/meu_coruja/grade.html
+++ b/fonte/coruja/meu_coruja/grade.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="manifest" href="manifest.json">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <title>Minha Grade Horária</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/tabela.css">
@@ -145,7 +146,7 @@
                     <input class="accordion-item-input" type="checkbox" name="accordion" id="item4" />
                     <label for="item4" class="accordion-item-hd">Quinta<span class="accordion-item-hd-cta">&#9650;</span></label>
                     <div class="accordion-item-bd">
-                        <table>
+                        <table id="QUI">
                             <thead>
                                 <tr>
                                     <th>Horário</th>
