--- a/fonte/coruja/meu_coruja/sidebar.html
+++ b/fonte/coruja/meu_coruja/sidebar.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="manifest" href="manifest.json">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <script>
             /* $(document).ready(function () {
