--- a/fonte/coruja/meu_coruja/grade.html
+++ b/fonte/coruja/meu_coruja/grade.html
@@ -23,8 +23,9 @@
                 }
             });
             $(document).ready(function () {
-
-
+                var diasSemanaEnum = ["SEG", "TER", "QUA", "QUI", "SEX", "SAB"];
+                Object.freeze(diasSemanaEnum);
+                
                 boletim = JSON.parse(localStorage.getItem('meuCoruja')).boletim.disciplinas;
 
                 for (i = 0; i < boletim.length; i++) {
@@ -32,22 +33,22 @@
                     for (j = 0; j < boletim[i].minhaGrade.length; j++) {
                         switch (boletim[i].minhaGrade[j].diaDaSemana) {
                             case "SEG":
-                                flg_dia = "SEG";
+                                flg_dia = diasSemanaEnum[0];
                                 break;
                             case "TER":
-                                flg_dia = "TER";
+                                flg_dia = diasSemanaEnum[1];
                                 break;
                             case "QUA":
-                                flg_dia = "QUA";
+                                flg_dia = diasSemanaEnum[2];
                                 break;
                             case "QUI":
-                                flg_dia = "QUI";
+                                flg_dia = diasSemanaEnum[3];
                                 break;
                             case "SEX":
-                                flg_dia = "SEX";
+                                flg_dia = diasSemanaEnum[4];
                                 break;
                             case "SAB":
-                                flg_dia = "SAB";
+                                flg_dia = diasSemanaEnum[5];
                                 break;
                         }
                         horario = boletim[i].minhaGrade[j].horario;
@@ -63,6 +64,16 @@
                                         );
                     }
 
+
+                }
+
+                
+
+                for (i = 0; i < diasSemanaEnum.length; i++) {
+                    if (document.getElementById(diasSemanaEnum[i]).rows.length <= 1) {
+                        document.getElementById(diasSemanaEnum[i]).style.display = "none";
+                    } else
+                        document.getElementById("label" + diasSemanaEnum[i]).style.color = "#d74438";
                 }
 
             });
@@ -77,7 +88,7 @@
                 <!-- SEG -->
                 <li class="accordion-item">
                     <input class="accordion-item-input" type="checkbox" name="accordion" id="item1" />
-                    <label for="item1" class="accordion-item-hd">Segunda<span class="accordion-item-hd-cta">&#9650;</span></label>
+                    <label for="item1" class="accordion-item-hd" id="labelSEG">Segunda<span class="accordion-item-hd-cta">&#9650;</span></label>
                     <div class="accordion-item-bd">
                         <table id="SEG">
                             <thead>
@@ -98,7 +109,7 @@
                 <!-- TER -->
                 <li class="accordion-item">
                     <input class="accordion-item-input" type="checkbox" name="accordion" id="item2" />
-                    <label for="item2" class="accordion-item-hd">Terça<span class="accordion-item-hd-cta">&#9650;</span></label>
+                    <label for="item2" class="accordion-item-hd" id="labelTER">Terça<span class="accordion-item-hd-cta">&#9650;</span></label>
                     <div class="accordion-item-bd">
                         <table id="TER">
                             <thead>
@@ -119,7 +130,7 @@
                 <!-- QUA -->
                 <li class="accordion-item">
                     <input class="accordion-item-input" type="checkbox" name="accordion" id="item3" />
-                    <label for="item3" class="accordion-item-hd">Quarta<span class="accordion-item-hd-cta">&#9650;</span></label>
+                    <label for="item3" class="accordion-item-hd" id="labelQUA">Quarta<span class="accordion-item-hd-cta">&#9650;</span></label>
                     <div class="accordion-item-bd">
                         <table id="QUA">
                             <thead>
@@ -139,7 +150,7 @@
                 <!-- QUI -->
                 <li class="accordion-item">
                     <input class="accordion-item-input" type="checkbox" name="accordion" id="item4" />
-                    <label for="item4" class="accordion-item-hd">Quinta<span class="accordion-item-hd-cta">&#9650;</span></label>
+                    <label for="item4" class="accordion-item-hd" id="labelQUI">Quinta<span class="accordion-item-hd-cta">&#9650;</span></label>
                     <div class="accordion-item-bd">
                         <table id="QUI">
                             <thead>
@@ -159,7 +170,7 @@
                 <!-- SEX -->
                 <li class="accordion-item">
                     <input class="accordion-item-input" type="checkbox" name="accordion" id="item5" />
-                    <label for="item5" class="accordion-item-hd">Sexta<span class="accordion-item-hd-cta">&#9650;</span></label>
+                    <label for="item5" class="accordion-item-hd" id="labelSEX">Sexta<span class="accordion-item-hd-cta">&#9650;</span></label>
                     <div class="accordion-item-bd">
                         <table id="SEX">
                             <thead>
@@ -179,7 +190,7 @@
                 <!-- SAB -->
                 <li class="accordion-item">
                     <input class="accordion-item-input" type="checkbox" name="accordion" id="item6" />
-                    <label for="item6" class="accordion-item-hd">Sábado<span class="accordion-item-hd-cta">&#9650;</span></label>
+                    <label for="item6" class="accordion-item-hd" id="labelSAB">Sábado<span class="accordion-item-hd-cta">&#9650;</span></label>
                     <div class="accordion-item-bd">
                         <table id="SAB">
                             <thead>
