Criação da tela de mensagens

--- a/fonte/coruja/meu_coruja/sidebar.html
+++ b/fonte/coruja/meu_coruja/sidebar.html
@@ -39,6 +39,7 @@
             <li class="nav-item" id="link2"><a href="grade.html">Minha Grade</a></li>
             <li class="nav-item" id="link3"><a href="historico.html">Histórico</a></li>
             <li class="nav-item" id="link4"><a class="current" href="pendencias.html">Pendências</a></li>
+            <li class="nav-item" id="link5"><a class="current" href="mensagens.html">Mensagens</a></li>
             <li class="nav-item"><a href="sair.php">Sair</a></li>
         </ul>
 
