[Mensagens] • Adicionada função para exibição das mensagens mais recentes dada uma quantidade.
[Boletim]
• Agora exibe Critérios de Avaliação dinamicamente.

[Diagrama de Classes]
• O diagrama foi atualizado.

--- a/fonte/coruja/meu_coruja/pendencias.html
+++ b/fonte/coruja/meu_coruja/pendencias.html
@@ -47,7 +47,7 @@
         <div class="site-wrap">
             <h1 class="titulo-pagina">Disciplinas Pendentes</h1>
 
-            <table  id="pendencias" style="overflow: hidden;">
+            <table class="table table-striped" id="pendencias">
                 <thead>
                     <tr>
                         <th>Disciplina</th>
