• Adicionado suporte a fotos dinâmicas de Usuário

--- a/fonte/coruja/meu_coruja/boletim.html
+++ b/fonte/coruja/meu_coruja/boletim.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html manifest="meucoruja.appcache">
+<html>
     <head>
-
         <link rel="manifest" href="manifest.json">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <meta http-equiv="Content-Type" content="text/html; charset=windows-1252" />
@@ -103,7 +102,6 @@
     <body class="link1">
 
         <div class="site-wrap">
-
             <h1>Boletim</h1>
             <div><h2 id="siglaPeriodoLetivo" align="center"></h2></div>
             <div id="boletim"></div>
