--- a/fonte/coruja/meu_coruja/index.html
+++ b/fonte/coruja/meu_coruja/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html manifest="meucoruja.appcache">
+<html>
     <head>
         <link rel="manifest" href="manifest.json">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -12,7 +12,6 @@
         <title>Meu Coruja</title>
     </head>
     <body>
-	
 	<div class="wrapper">
             <div id="result"></div>
                 <form class="form-signin" id="loginForm" action="teste.php">       
