--- a/fonte/coruja/meu_coruja/historico.html
+++ b/fonte/coruja/meu_coruja/historico.html
@@ -27,7 +27,7 @@
             $(document).ready(function () {
 
                 historico = JSON.parse(localStorage.getItem('meuCoruja')).historico;
-                console.log(historico);
+
                 for (var i = 0; i < historico.disciplinas.length; i++) {
                     $("#historico").find('tbody')
                             .append(($('<tr>'))
@@ -41,7 +41,7 @@
 
                 function exibeCR() {
                     if (JSON.stringify(historico) !== "[]") {
-                        document.getElementById("cr").innerHTML = "CR: " + parseFloat(historico.cr);
+                        document.getElementById("cr").innerHTML = "CR: " + historico.cr;
                     }
                 }
 
